Positioned the buttons and fixed the toast not showing when student is added.

--- a/client/src/components/sidebar/Sidebar.module.css
+++ b/client/src/components/sidebar/Sidebar.module.css
@@ -41,6 +41,7 @@
   transition: all 0.1s ease-out;
   padding: 8px;
   margin-top: auto;
+  margin-bottom: 20px;
 }
 
 .sidebarItem:hover:last-child {
