--- a/client/src/pages/announcements/Announcements.module.css
+++ b/client/src/pages/announcements/Announcements.module.css
@@ -42,9 +42,10 @@
   border-radius: 5px;
   font-size: 100%;
   font-weight: bold;
-  margin-left: auto;
-  margin-right: 40px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  position: fixed;
+  right: 1vw;
+  top: 1vw;
 }
 
 .addAnnouncement:hover {
