--- a/client/src/pages/coursepage/CoursePage.module.css
+++ b/client/src/pages/coursepage/CoursePage.module.css
@@ -15,8 +15,9 @@
   font-size: 100%;
   font-weight: bold;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  margin-right: 15px;
-  margin-bottom: 10px;
+  position: fixed;
+  right: 1vw;
+  top: 1vw;
 }
 
 .controls {
